name:                ButtonLedSystemFP
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/benkio/ButtonLedSystemFP#readme
license:             BSD3
license-file:        LICENSE
author:              Enrico Benini
maintainer:          benkio@gmail.com
copyright:           2016 Enrico Benini
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pure.Data
                     , Pure.Behaviours
                     , Application.Local
                     , Application.Distributed.IO.Main
                     , Application.Distributed.IO.Infrastructure
                     , Application.Distributed.Process.Infrastructure
                     , Application.Distributed.Process.Specific
                     , Application.Distributed.ServerAction.Infrastructure
                     , Application.Distributed.ServerAction.MessageHandlers                      
  build-depends:       base,
                       mtl,
                       gtk,
                       distributed-process,
                       network-transport-tcp,
                       network-transport,
                       binary,
                       bytestring,
                       lens
  default-language:    Haskell2010

executable ButtonLedSystemFP-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ButtonLedSystemFP
  default-language:    Haskell2010

test-suite ButtonLedSystemFP-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ButtonLedSystemFP
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/benkio/ButtonLedSystemFP
